# python-for-everyone_basic-devops

./: .flake8  README.md  package_test.py  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
src/calculator/: __init__.py  operations.py
tests/: test_operations.py
